renaming scripts and styles files, resetting iindex.html

--- a/web/index.html
+++ b/web/index.html
@@ -7,47 +7,14 @@
     <meta name="keywords" content="milosz, dura, portfolio"/>
     <meta name="viewport" content="initial-scale=1.0 maximum-scale=1.0 user-scalable=0"/>
     <title>Milosz Dura // Web Developer // Student // Geek</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="icon" href="assets/favicon.ico?v=2" type="image/x-icon"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-<!-- Google Analytics -->
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-50985585-2', 'auto');
-    ga('send', 'pageview');
-</script>
-<div id="wrapper">
-    <div id="welcome">
-        <div id="welcome-content">
-            <h1>MILOSZ DURA</h1>
-            <h2>WEB DEVELOPER // STUDENT // GEEK</h2>
-            <ul>
-                <li><a href="mailto:milosz.dura@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="https://twitter.com/MiloszDura" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://uk.linkedin.com/in/miloszdura" target="_blank"><i class="fa fa-linkedin"></i></a>
-                </li>
-            </ul>
+<div class="wrapper">
+    <div class="banner">
+        <div class="profile">
+            <img src="" alt="Milosz Dura">
         </div>
     </div>
 </div>
-<script src="app.js"></script>
 </body>
 </html>
